[package]
name = "secondary-slot-tracker"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
codec = { package = "parity-scale-codec", version = "3.6.1" }
derive_more = "0.99.17"
env_logger = "0.11.5"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = "1.0.197"
serde_json = "1.0.108"
sp-consensus-babe = "0.40" 
sp-core = "34"
sp-crypto-hashing = "0.1"
structopt = "0.3.26"
subxt = "0.34"
tokio = { version = "1.34.0", features = ["full"] }
